# symptom-tracker-backup

./: .gitignore  Procfile  README.md  elm-tooling.json  elm.json  package-lock.json  package.json  symptom-tracker.cabal  tailwind.config.js  webpack.config.js
client/: index.html
client/src/: Button.elm  Colour.elm  Controls.elm  DataSet.elm  Dropdown.elm  Graph.elm  Icon.elm  IdDict.elm  Main.elm  Ports.elm  Stringx.elm  Textarea.elm  Textbox.elm  Trackable.elm  Trackables.elm  UserData.elm
client/src/Chart/: Chartable.elm  LineChart.elm  Trackable.elm
client/src/Extra/: Array.elm  Dict.elm  Html.elm  List.elm
client/src/Page/: Chart.elm  Chartables.elm  Charts.elm  Day.elm  Graph.elm  Settings.elm  Trackables.elm
client/src/Svg/: Graph.elm  Icon.elm
client/src/UserData/: Chartable.elm  ChartableId.elm  LineChart.elm  LineChartId.elm  Trackable.elm  TrackableId.elm
client/static/: font-awesome.html  index.js
client/static/img/: font-awesome-brands.svg.elm  font-awesome-regular.svg.elm  font-awesome-solid.svg.elm
client/static/styles/: main.scss
server/app/: Main.hs
server/database/: database_setup.sql  grant.sql
server/src/: Api.hs  App.hs  Config.hs
server/test/: Spec.hs
